2008-Sep-28  yselkowitz

	* lib/ruby.cygclass (ruby_install): Accept RDOC_MODULE.
	(rubyinto, doruby): Added.

	* lib/ruby-gnome2.cygclass: Add ruby-goocanvas.

2008-Sep-23  yselkowitz

	* lib/berkdb.cygclass (berkdb_compile) [tcl]: tclConfig.sh moved.

	* lib/autotools.cygclass (cygautoreconf),
	lib/gnome2.cygclass (gnome2_autoreconf): Detect missing LT_OUTPUT.

	* lib/autotools.cygclass (cygautoreconf): Better detection of autoconf2.5.
	Catch illegal WANT_AUTOCONF value.

	* bin/cygport.in (cygtest): Don't exit if tests causes errors.

2008-Sep-15  yselkowitz

	* lib/distutils.cygclass (distutils_install):
	Collision-protect zope/__init__.py in distutils.
	lib/zope.cygclass: Remove.

	* configure.ac: Post-release version bump.

2008-Sep-10  yselkowitz

	* Tagged 0.9.2.

	* Website moved to sourceware.org.

2008-Sep-07  yselkowitz

	* lib/ruby-gnome2.cygclass: Remove support for obsolete versions.
	(ruby_gnome2_install): Only install implibs where required.

	* lib/tcl.cygclass (TK_INCLUDEDIR, TK_LIBDIR): Define.

2008-Sep-05  yselkowitz

	* bin/cygport.in (__prepdoc):
	bin/dodoc:
	bin/newdoc:
	lib/autotools.cygclass (cygconf):
	lib/berkdb.cygclass (berkdb_install):
	lib/kde3.cygclass (kde3_install):
	lib/kde4.cygclass (kde4_install):
	lib/ruby-gnome2.cygclass (ruby_gnome2_install):
	Move docdir to /usr/share/doc/PACKAGE.

2008-Sep-02  yselkowitz

	* bin/cygport.in (__src_prep): Handle multiple-patch tarballs.

2008-Sep-01  yselkowitz

	* bin/make_desktop_entry: Update to 1.0 spec; allow additional args.

	* lib/Makefile.am:
	lib/rox.cygclass: NEW cygclass for ROX desktop packages.

	* lib/svn.cygclass: Fix SVN_MODULE where SVN_URI ends with SVN_BRANCH.

	* lib/distutils.cygclass: Simplify ORIG_PN definition.

	* lib/lua.cygclass: Remove support for obsolete 5.0.

	* lib/gnome.org.cygclass: Remove obsolete CVS_URI.

	* bin/cygport.in:
	lib/*.cygclass:
	readonly-protect functions; remove obsolete aliases.

	* bin/cygport.in: No need for _name variable.
