@@ -1,5 +1,7 @@
 2008-Sep-28  yselkowitz
 
+	* bin/cygport.in (pushd, popd): Added overrides.
+
 	* lib/ruby.cygclass (ruby_install): Accept RDOC_MODULE.
 	(rubyinto, doruby): Added.
 
